feat : [FE] just commit

--- a/html/detailedReservation/detailedReservation.html
+++ b/html/detailedReservation/detailedReservation.html
@@ -17,11 +17,61 @@
   <div id="header-placeholder"></div>
   <body>
     <div class="hd__inner1100">
-      <!-- 1.헤더 설명 -->
-      <section></section>
-      <!-- 2.서치 바 기능 -->
-      <!--3. 상세 예약 현황  -->
-      <!--4.   -->
+      <!-- 1.폴더 위치 -->
+      <section
+        class="detailReservation-location"
+        id="detailedReservation-section1"
+      >
+        <div>보관함</div>
+        <div>/</div>
+        <div>결제내역</div>
+      </section>
+      <!-- 2.헤더 설명 -->
+      <section
+        class="detailResrvation-header"
+        id="detailedReservation-section2"
+      >
+        <h3>상세 예약 현황</h3>
+      </section>
+      <!-- 3.서치 바 기능 -->
+      <section
+        class="detailReservation-search"
+        id="detailedReservation-section3"
+      >
+        <label for="detailReservation-search-bar"
+          ><img src="" alt="목록"
+        /></label>
+        <input type="search" class="search-bar" id="myPayment-search-bar" />
+        <button id="List-searh-button">Search</button>
+      </section>
+      <div class="v1-line"></div>
+      <!-- 4.필터  -->
+      <section
+        class="detailReservation-dropdown"
+        id="detailedReservation-section4"
+      >
+        <div class="dropdown">
+          <select name="brand" id="brand">
+            <option>업체 선택</option>
+            <option value="studio">스튜디오</option>
+            <option value="dress">드레스</option>
+            <option value="makeUp">메이크업</option>
+          </select>
+        </div>
+      </section>
+      <!--5. 상세 예약 현황  -->
+      <section class="detailReservation-list" id="detailedReservation-section5">
+        <div class="hd__inner900">
+          <div class="Card">
+            <img src="" alt="업체 이미지" />
+            <h3>S스튜디오</h3>
+            <p>서울 특별시 서초구 신반포로41길 7</p>
+          </div>
+        </div>
+      </section>
+      <!-- 6. 클릭한 상세 예약 내용(모달창) -->
+
+      <!-- 7.페이지네이션 -->
     </div>
   </body>
   <div id="footer-placeholder"></div>
