--- a/html/mypage/mypage.html
+++ b/html/mypage/mypage.html
@@ -6,7 +6,6 @@
     <title>mypage</title>
     <link rel="stylesheet" href="../../css/common/reset.css" />
     <link rel="stylesheet" href="../../css/mypage/mypage.css" />
-    <link rel="stylesheet" href="../../css/main/main.css" />
 
     <link
       rel="stylesheet"
@@ -53,7 +52,6 @@
           <div class="out">
             <a href="#">회원 탈퇴</a>
           </div>
-          <div class="v1-line"></div>
           <div class="profile-main">
             <div class="profile-main-image">
               <img
@@ -105,7 +103,6 @@
           <div class="ReservationMange-go">
             <a href="#">방문 일정 상세보기</a>
           </div>
-          <div class="v1-line"></div>
           <br>
           <table class="table-VSplan">
             <thead>
@@ -144,7 +141,7 @@
             </tbody>
           </table>
         </section>
-        <BR></BR>
+        <BR></BR><br><br>
         <!-- 4.현재 예약 현황 -->
         <section class="recent-reservation" id="Mypage-section4">
           <div class="sub-title">현재 예약 현황</div>
@@ -152,7 +149,7 @@
           <div class="ReservationMange-go">
             <a href="#">상세 예약 현황 바로가기</a>
           </div>
-          <div class="v1-line"></div>
+          <br>
           <div class="dropdown">
             <select name="brand" id="brand">
               <option>업체 선택</option>
@@ -251,23 +248,23 @@
           <div class="proposal-cardpackage">
             <div class="proposal-card">
               <img src="../../assets/images/proposal-studio.png" alt="폼 카드 ">
-              <div>더 베네치아</div>
-              <div>서울 특별시 강동구</div>
+              <div><b>브랜드명:</b>더 베네치아</div>
+              <div><b>주소:</b><p> 서울 특별시 강동구</p></div>
             </div>
             <div class="proposal-card">
               <img src="../../assets/images/proposal-studio.png" alt="폼 카드 ">
-              <div>더 베네치아</div>
-              <div>서울 특별시 강동구</div>
+              <div><b>브랜드명:</b>더 베네치아</div>
+              <div><b>주소:</b><p> 서울 특별시 강동구</p></div>
             </div>
             <div class="proposal-card">
               <img src="../../assets/images/proposal-studio.png" alt="폼 카드 ">
-              <div>더 베네치아</div>
-              <div>서울 특별시 강동구</div>
+              <div><b>브랜드명:</b>  더 베네치아</div>
+              <div><b>주소:</b><p> 서울 특별시 강동구</p></div>
             </div>
             <div class="proposal-card">
               <img src="../../assets/images/proposal-studio.png" alt="폼 카드 ">
-              <div>더 베네치아</div>
-              <div>서울 특별시 강동구</div>
+              <div><b>브랜드명:</b>더 베네치아</div>
+              <div><b>주소:</b><p> 서울 특별시 강동구</p></div>
             </div>
           </div>
           <div class="pagination">
