docs : [FE] jongwon document change

--- a/html/mypage/detailedReservation.html
+++ b/html/mypage/detailedReservation.html
@@ -4,15 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>detailReservation</title>
-    <link
-      rel="stylesheet"
-      href="../../css/detailedReservation/detailedReservation.css"
-    />
+    <link rel="stylesheet" href="../../css/myPage/detailedReservation.css" />
     <script defer src="../../js/main/main.js"></script>
-    <script
-      defer
-      src="../../js/detaiedReservation/detaiedReservation.js"
-    ></script>
+    <script defer src="../../js/myPage/detailedReservation.js"></script>
   </head>
   <div id="header-placeholder"></div>
   <body>
