--- a/html/mypage/myPayment.html
+++ b/html/mypage/myPayment.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>myPayment</title>
-    <link rel="stylesheet" href="../../css/myPayment/myPayment.css" />
+    <link rel="stylesheet" href="../../css/myPage/myPayment.css" />
 
-    <script defer src="../../js/myPayment/myPayment.js"></script>
+    <script defer src="../../js/myPage/myPayment.js"></script>
     <script defer src="../../js/main/main.js"></script>
   </head>
   <div id="header-placeholder"></div>
