--- a/html/mypage/LikeList.html
+++ b/html/mypage/LikeList.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LikeList</title>
-    <link rel="stylesheet" href="../../css/likeList/likeList.css" />
+    <link rel="stylesheet" href="../../css/myPage/LikeList.css" />
     <link rel="stylesheet" href="../../css/common/reset.css" />
-    <script defer src="../../js/likeList/LikeList.js"></script>
+    <script defer src="../../js/myPage/LikeList.js"></script>
     <script defer src="../../js/main/main.js"></script>
   </head>
   <div id="header-placeholder"></div>
