--- a/html/weddingHall/weddingHallDetail.html
+++ b/html/weddingHall/weddingHallDetail.html
@@ -138,7 +138,7 @@
             <!-- 4. 웨딩홀 견적 계산기-->
             <section class="estimator">
                 <div class="title-container">
-                    <h2>예식 일정 현황</h2>
+                    <h2>웨딩홀 견적 계산기</h2>
                 </div>
                 <div class="grid-container">
                     <div class="section">
@@ -288,10 +288,248 @@
             </section>
 
             <!-- 5. 비슷한 가격대 웨딩홀 -->
-            <section class="similar-price"></section>
+            <section class="similar-price hd__inner1100">
+                <div class="title-container">
+                    <h2>비슷한 가격대 웨딩홀</h2>
+                </div>
+                <div class="similar-container">
+                    <div class="similar-inner">
+                        <div class="similar-item">
+                            <div class="similar-item-img">
+                                <img
+                                    src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/list/weddinghall1.jpg"
+                                    alt="웨딩홀 이미지 1"
+                                />
+                            </div>
+                            <div class="similar-item-title">
+                                <p>서울특별시 강동구</p>
+                                <h2>더베네치아</h2>
+                            </div>
+                        </div>
+                        <div class="similar-item">
+                            <div class="similar-item-img">
+                                <img
+                                    src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/list/weddinghall2.jpg"
+                                    alt="웨딩홀 이미지 1"
+                                />
+                            </div>
+                            <div class="similar-item-title">
+                                <p>서울특별시 강동구</p>
+                                <h2>더베네치아</h2>
+                            </div>
+                        </div>
+                        <div class="similar-item">
+                            <div class="similar-item-img">
+                                <img
+                                    src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/list/weddinghall3.jpg"
+                                    alt="웨딩홀 이미지 1"
+                                />
+                            </div>
+                            <div class="similar-item-title">
+                                <p>서울특별시 강동구</p>
+                                <h2>더베네치아</h2>
+                            </div>
+                        </div>
+                        <div class="similar-item">
+                            <div class="similar-item-img">
+                                <img
+                                    src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/list/weddinghall4.jpg"
+                                    alt="웨딩홀 이미지 1"
+                                />
+                            </div>
+                            <div class="similar-item-title">
+                                <p>서울특별시 강동구</p>
+                                <h2>더베네치아</h2>
+                            </div>
+                        </div>
+                        <div class="similar-item">
+                            <div class="similar-item-img">
+                                <img
+                                    src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/list/weddinghall1.jpg"
+                                    alt="웨딩홀 이미지 1"
+                                />
+                            </div>
+                            <div class="similar-item-title">
+                                <p>서울특별시 강동구</p>
+                                <h2>더베네치아</h2>
+                            </div>
+                        </div>
+                        <div class="similar-item">
+                            <div class="similar-item-img">
+                                <img
+                                    src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/list/weddinghall2.jpg"
+                                    alt="웨딩홀 이미지 1"
+                                />
+                            </div>
+                            <div class="similar-item-title">
+                                <p>서울특별시 강동구</p>
+                                <h2>더베네치아</h2>
+                            </div>
+                        </div>
+                        <div class="similar-item">
+                            <div class="similar-item-img">
+                                <img
+                                    src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/list/weddinghall3.jpg"
+                                    alt="웨딩홀 이미지 1"
+                                />
+                            </div>
+                            <div class="similar-item-title">
+                                <p>서울특별시 강동구</p>
+                                <h2>더베네치아</h2>
+                            </div>
+                        </div>
+                        <div class="similar-item">
+                            <div class="similar-item-img">
+                                <img
+                                    src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/list/weddinghall4.jpg"
+                                    alt="웨딩홀 이미지 1"
+                                />
+                            </div>
+                            <div class="similar-item-title">
+                                <p>서울특별시 강동구</p>
+                                <h2>더베네치아</h2>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="similar-buttons">
+                    <button class="similar-button left" id="similar-prevButton">
+                        <img
+                            src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/common/arrow/left-arrow.png"
+                        />
+                    </button>
+                    <div class="currentPage" id="similar-currentPage"></div>
+                    <div class="slice">/</div>
+                    <div class="totalPages" id="similar-totalPages"></div>
+                    <button class="similar-button right" id="similar-nextButton">
+                        <img
+                            src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/common/arrow/right-arrow.png"
+                        />
+                    </button>
+                </div>
+            </section>
 
             <!-- 6. 다른 고객이 함께 본 상품 -->
-            <section class="recommended"></section>
+            <section class="recommend hd__inner1100">
+                <div class="title-container">
+                    <h2>다른 고객이 함께 본 상품</h2>
+                </div>
+                <div class="recommend-container">
+                    <div class="recommend-inner">
+                        <div class="recommend-item">
+                            <div class="recommend-item-img">
+                                <img
+                                    src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/list/weddinghall1.jpg"
+                                    alt="웨딩홀 이미지 1"
+                                />
+                            </div>
+                            <div class="recommend-item-title">
+                                <p>서울특별시 강동구</p>
+                                <h2>더베네치아</h2>
+                            </div>
+                        </div>
+                        <div class="recommend-item">
+                            <div class="recommend-item-img">
+                                <img
+                                    src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/list/weddinghall2.jpg"
+                                    alt="웨딩홀 이미지 1"
+                                />
+                            </div>
+                            <div class="recommend-item-title">
+                                <p>서울특별시 강동구</p>
+                                <h2>더베네치아</h2>
+                            </div>
+                        </div>
+                        <div class="recommend-item">
+                            <div class="recommend-item-img">
+                                <img
+                                    src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/list/weddinghall3.jpg"
+                                    alt="웨딩홀 이미지 1"
+                                />
+                            </div>
+                            <div class="recommend-item-title">
+                                <p>서울특별시 강동구</p>
+                                <h2>더베네치아</h2>
+                            </div>
+                        </div>
+                        <div class="recommend-item">
+                            <div class="recommend-item-img">
+                                <img
+                                    src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/list/weddinghall4.jpg"
+                                    alt="웨딩홀 이미지 1"
+                                />
+                            </div>
+                            <div class="recommend-item-title">
+                                <p>서울특별시 강동구</p>
+                                <h2>더베네치아</h2>
+                            </div>
+                        </div>
+                        <div class="recommend-item">
+                            <div class="recommend-item-img">
+                                <img
+                                    src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/list/weddinghall1.jpg"
+                                    alt="웨딩홀 이미지 1"
+                                />
+                            </div>
+                            <div class="recommend-item-title">
+                                <p>서울특별시 강동구</p>
+                                <h2>더베네치아</h2>
+                            </div>
+                        </div>
+                        <div class="recommend-item">
+                            <div class="recommend-item-img">
+                                <img
+                                    src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/list/weddinghall2.jpg"
+                                    alt="웨딩홀 이미지 1"
+                                />
+                            </div>
+                            <div class="recommend-item-title">
+                                <p>서울특별시 강동구</p>
+                                <h2>더베네치아</h2>
+                            </div>
+                        </div>
+                        <div class="recommend-item">
+                            <div class="recommend-item-img">
+                                <img
+                                    src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/list/weddinghall3.jpg"
+                                    alt="웨딩홀 이미지 1"
+                                />
+                            </div>
+                            <div class="recommend-item-title">
+                                <p>서울특별시 강동구</p>
+                                <h2>더베네치아</h2>
+                            </div>
+                        </div>
+                        <div class="recommend-item">
+                            <div class="recommend-item-img">
+                                <img
+                                    src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/list/weddinghall4.jpg"
+                                    alt="웨딩홀 이미지 1"
+                                />
+                            </div>
+                            <div class="recommend-item-title">
+                                <p>서울특별시 강동구</p>
+                                <h2>더베네치아</h2>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="recommend-buttons">
+                    <button class="recommend-button left" id="prevButton">
+                        <img
+                            src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/common/arrow/left-arrow.png"
+                        />
+                    </button>
+                    <div class="currentPage" id="currentPage"></div>
+                    <div class="slice">/</div>
+                    <div class="totalPages" id="totalPages"></div>
+                    <button class="recommend-button right" id="nextButton">
+                        <img
+                            src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/common/arrow/right-arrow.png"
+                        />
+                    </button>
+                </div>
+            </section>
         </div>
         <div id="footer-placeholder"></div>
     </body>
