style : [FE] 웨딩홀 상세페이지 - title css 수정

--- a/html/weddingHall/weddingHallDetail.html
+++ b/html/weddingHall/weddingHallDetail.html
@@ -288,8 +288,10 @@
             </section>
 
             <!-- 5. 비슷한 가격대 웨딩홀 -->
-            <section class="similar-price hd__inner1100">
-                <div class="title-container">
+            <section class="similar">
+                <div class="hd__inner1100">
+
+                <div class="title-container noline">
                     <h2>비슷한 가격대 웨딩홀</h2>
                 </div>
                 <div class="similar-container">
@@ -407,11 +409,13 @@
                         />
                     </button>
                 </div>
+            </div>
             </section>
 
             <!-- 6. 다른 고객이 함께 본 상품 -->
-            <section class="recommend hd__inner1100">
-                <div class="title-container">
+            <section class="recommend">
+                <div class="hd__inner1100">
+                <div class="title-container noline">
                     <h2>다른 고객이 함께 본 상품</h2>
                 </div>
                 <div class="recommend-container">
@@ -529,7 +533,8 @@
                         />
                     </button>
                 </div>
-            </section>
+            </div>
+        </section>
         </div>
         <div id="footer-placeholder"></div>
     </body>
