feat : [FE] login update2

--- a/html/login/Passwordchange.html
+++ b/html/login/Passwordchange.html
@@ -9,12 +9,12 @@
 <body>
     <div class="join">
         <div>
-            <h1>간편가입</h1>
+            <h1>비밀번호수정</h1>
             <hr>
             <br />
         </div>
         <div>
-            <b>로그인에 사용할<br />비밀번호를 입력해주세요.</b>      
+            <b>로그인에 사용할<br />새로운 비밀번호를 입력해주세요.</b>      
         </div>
         <br />
         <div class ="Passwordset">
