--- a/html/login/joinPaly.html
+++ b/html/login/joinPaly.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/joinPaly.css">
+    <link rel="stylesheet" href="../../css/login/joinPaly.css">
 </head>
 <body>
     <script defer src="js/joinPaly.js"></script>
@@ -18,7 +18,7 @@
 
         <div>
             <p><b class="bol">본인인증을 진행해주세요.</b>
-            <br/><img src="Image/자물쇠.png" class="img">안전한 거래를 위해 딱 한번 본인인증을 진행해요.</p>
+            <br/><img src="#" class="img">안전한 거래를 위해 딱 한번 본인인증을 진행해요.</p>
             <br />
         </div>
 
