feat : [FE] partnersTopPicks

--- a/html/mypage/detailedReservation.html
+++ b/html/mypage/detailedReservation.html
@@ -35,10 +35,13 @@
         <label for="detailReservation-search-bar"
           ><img src="" alt="목록"
         /></label>
-        <input type="search" class="search-bar" id="myPayment-search-bar" />
+        <input
+          type="search"
+          class="search-bar"
+          id="detailReservation-search-bar"
+        />
         <button id="List-searh-button">Search</button>
       </section>
-      <div class="v1-line"></div>
       <!-- 4.필터  -->
       <section
         class="detailReservation-dropdown"
