--- a/html/mypage/partnersTopPicks.html
+++ b/html/mypage/partnersTopPicks.html
@@ -37,26 +37,99 @@
         </div>
       </section>
       <!-- 4. 카드 리스트 -->
-      <div class="">
-        <img src="" alt="이미지" />
-        <div>
-          <h3>로이 스튜디오</h3>
-          <h5>Roi studio</h5>
-        </div>
-        <p>서울 특별시 강남구</p>
-        <div>
-          <p>촬영비:</p>
-          <p>679,000원</p>
-        </div>
-        <div>
-          <p>최소 보증:</p>
-          <p>150명</p>
-        </div>
-        <div>
-          <p>전화번호</p>
-          <p>010-XXXX-XXXX</p>
-        </div>
-      </div>
+      <section class="partnersTopPicks-cardList" id="partnersTopPicks-section4">
+        <div class="Card-List">
+          <div class="Card">
+            <img
+              src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-1.png"
+              alt="이미지"
+            />
+            <div>
+              <h3>로이 스튜디오</h3>
+              <h5>Roi studio</h5>
+            </div>
+            <div>
+              <p><b>주소: </b>서울 특별시 강남구</p>
+            </div>
+            <div>
+              <p><b>촬영비: </b>679,000원</p>
+            </div>
+            <div>
+              <p><b>최소 보증: </b>150명</p>
+            </div>
+            <div>
+              <p><b>전화번호: </b>010-XXXX-XXXX</p>
+            </div>
+          </div>
+          <div class="Card">
+            <img
+              src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-1.png"
+              alt="이미지"
+            />
+            <div>
+              <h3>로이 스튜디오</h3>
+              <h5>Roi studio</h5>
+            </div>
+            <div>
+              <p><b>주소: </b>서울 특별시 강남구</p>
+            </div>
+            <div>
+              <p><b>촬영비: </b>679,000원</p>
+            </div>
+            <div>
+              <p><b>최소 보증: </b>150명</p>
+            </div>
+            <div>
+              <p><b>전화번호: </b>010-XXXX-XXXX</p>
+            </div>
+          </div>
+          <div class="Card">
+            <img
+              src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-1.png"
+              alt="이미지"
+            />
+            <div>
+              <h3>로이 스튜디오</h3>
+              <h5>Roi studio</h5>
+            </div>
+            <div>
+              <p><b>주소: </b>서울 특별시 강남구</p>
+            </div>
+            <div>
+              <p><b>촬영비: </b>679,000원</p>
+            </div>
+            <div>
+              <p><b>최소 보증: </b>150명</p>
+            </div>
+            <div>
+              <p><b>전화번호: </b>010-XXXX-XXXX</p>
+            </div>
+          </div>
+          <div class="Card">
+            <img
+              src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-1.png"
+              alt="이미지"
+            />
+            <div>
+              <h3>로이 스튜디오</h3>
+              <h5>Roi studio</h5>
+            </div>
+            <div>
+              <p><b>주소: </b>서울 특별시 강남구</p>
+            </div>
+            <div>
+              <p><b>촬영비: </b>679,000원</p>
+            </div>
+            <div>
+              <p><b>최소 보증: </b>150명</p>
+            </div>
+            <div>
+              <p><b>전화번호: </b>010-XXXX-XXXX</p>
+            </div>
+          </div>
+          
+      </section>
+      <!-- 5. pagination -->
     </div>
   </body>
   <div id="footer-placeholder"></div>
