--- a/html/weddingHall/weddingHallDetail.html
+++ b/html/weddingHall/weddingHallDetail.html
@@ -15,8 +15,40 @@
     <body>
         <div id="header-placeholder"></div>
         <div class="hd__inner1100">
-            <!-- 1. 업체 설명 + 이미지 슬라이드 -->
-            <section class="description"></section>
+            <!-- 1. 업체 설명 + 이미지 캐러셀 -->
+            <section class="description">
+                <div class="main-title-container">
+                    <h1>[강남] 마리아쥬스퀘어</h1>
+                    <div id="tags-container">
+                        <!-- 태그 -->
+                    </div>
+                    <p>싱그러움 속 우아하고 세련된 더 프렌치 카든 웨딩
+                        합리적인 가격으로 호텔 웨딩을 오릴 수 있어요.
+                        250~300명 규모의 샴페인 홀, 소규모 스몰웨딩이 가능한 보르도홀 입니다.</p>
+                </div>
+                <div class="carousel-container">
+                    <div class="carousel-inner">
+                        <div class="company-image-item">
+                            <img src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/wedding/weddingdetail1.jpg" alt="웨딩홀 메인 이미지1"/>
+                        </div>
+                        <div class="company-image-item">
+                            <img src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/wedding/weddingdetail2.jpg"  alt="웨딩홀 메인 이미지2"/>
+                        </div>
+                        <div class="company-image-item">
+                            <img src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/wedding/weddingdetail3.jpg"  alt="웨딩홀 메인 이미지3"/>
+                        </div>
+                        <div class="company-image-item">
+                            <img src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/wedding/weddingdetail4.jpg"  alt="웨딩홀 메인 이미지4"/>
+                        </div>
+                        <div class="company-image-item">
+                            <img src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/wedding/weddingdetail5.jpg"  alt="웨딩홀 메인 이미지5"/>
+                        </div>
+                        <div class="company-image-item">
+                            <img src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/wedding/weddingdetail6.jpg"  alt="웨딩홀 메인 이미지6"/>
+                        </div>
+                    </div>
+                </div>
+            </section>
 
             <!-- 2. 업체 정보 + 지도-->
             <section class="information">
