feat : [FE] switch partnersTopPicks

--- a/html/mypage/partnersTopPicks.html
+++ b/html/mypage/partnersTopPicks.html
@@ -44,20 +44,12 @@
               src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-1.png"
               alt="이미지"
             />
-            <div>
+            <div class="Card-hover">
               <h3>로이 스튜디오</h3>
               <h5>Roi studio</h5>
-            </div>
-            <div>
               <p><b>주소: </b>서울 특별시 강남구</p>
-            </div>
-            <div>
               <p><b>촬영비: </b>679,000원</p>
-            </div>
-            <div>
               <p><b>최소 보증: </b>150명</p>
-            </div>
-            <div>
               <p><b>전화번호: </b>010-XXXX-XXXX</p>
             </div>
           </div>
@@ -66,20 +58,12 @@
               src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-1.png"
               alt="이미지"
             />
-            <div>
+            <div class="Card-hover">
               <h3>로이 스튜디오</h3>
               <h5>Roi studio</h5>
-            </div>
-            <div>
               <p><b>주소: </b>서울 특별시 강남구</p>
-            </div>
-            <div>
               <p><b>촬영비: </b>679,000원</p>
-            </div>
-            <div>
               <p><b>최소 보증: </b>150명</p>
-            </div>
-            <div>
               <p><b>전화번호: </b>010-XXXX-XXXX</p>
             </div>
           </div>
@@ -88,20 +72,12 @@
               src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-1.png"
               alt="이미지"
             />
-            <div>
+            <div class="Card-hover">
               <h3>로이 스튜디오</h3>
               <h5>Roi studio</h5>
-            </div>
-            <div>
               <p><b>주소: </b>서울 특별시 강남구</p>
-            </div>
-            <div>
               <p><b>촬영비: </b>679,000원</p>
-            </div>
-            <div>
               <p><b>최소 보증: </b>150명</p>
-            </div>
-            <div>
               <p><b>전화번호: </b>010-XXXX-XXXX</p>
             </div>
           </div>
@@ -110,26 +86,130 @@
               src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-1.png"
               alt="이미지"
             />
-            <div>
+            <div class="Card-hover">
               <h3>로이 스튜디오</h3>
               <h5>Roi studio</h5>
-            </div>
-            <div>
               <p><b>주소: </b>서울 특별시 강남구</p>
-            </div>
-            <div>
               <p><b>촬영비: </b>679,000원</p>
-            </div>
-            <div>
               <p><b>최소 보증: </b>150명</p>
+              <p><b>전화번호: </b>010-XXXX-XXXX</p>
             </div>
-            <div>
+          </div>
+          <div class="Card">
+            <img
+              src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-1.png"
+              alt="이미지"
+            />
+            <div class="Card-hover">
+              <h3>로이 스튜디오</h3>
+              <h5>Roi studio</h5>
+              <p><b>주소: </b>서울 특별시 강남구</p>
+              <p><b>촬영비: </b>679,000원</p>
+              <p><b>최소 보증: </b>150명</p>
+              <p><b>전화번호: </b>010-XXXX-XXXX</p>
+            </div>
+          </div>
+          <div class="Card">
+            <img
+              src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-1.png"
+              alt="이미지"
+            />
+            <div class="Card-hover">
+              <h3>로이 스튜디오</h3>
+              <h5>Roi studio</h5>
+              <p><b>주소: </b>서울 특별시 강남구</p>
+              <p><b>촬영비: </b>679,000원</p>
+              <p><b>최소 보증: </b>150명</p>
+              <p><b>전화번호: </b>010-XXXX-XXXX</p>
+            </div>
+          </div>
+          <div class="Card">
+            <img
+              src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-1.png"
+              alt="이미지"
+            />
+            <div class="Card-hover">
+              <h3>로이 스튜디오</h3>
+              <h5>Roi studio</h5>
+              <p><b>주소: </b>서울 특별시 강남구</p>
+              <p><b>촬영비: </b>679,000원</p>
+              <p><b>최소 보증: </b>150명</p>
+              <p><b>전화번호: </b>010-XXXX-XXXX</p>
+            </div>
+          </div>
+          <div class="Card">
+            <img
+              src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-1.png"
+              alt="이미지"
+            />
+            <div class="Card-hover">
+              <h3>로이 스튜디오</h3>
+              <h5>Roi studio</h5>
+              <p><b>주소: </b>서울 특별시 강남구</p>
+              <p><b>촬영비: </b>679,000원</p>
+              <p><b>최소 보증: </b>150명</p>
+              <p><b>전화번호: </b>010-XXXX-XXXX</p>
+            </div>
+          </div>
+          <div class="Card">
+            <img
+              src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-1.png"
+              alt="이미지"
+            />
+            <div class="Card-hover">
+              <h3>로이 스튜디오</h3>
+              <h5>Roi studio</h5>
+              <p><b>주소: </b>서울 특별시 강남구</p>
+              <p><b>촬영비: </b>679,000원</p>
+              <p><b>최소 보증: </b>150명</p>
+              <p><b>전화번호: </b>010-XXXX-XXXX</p>
+            </div>
+          </div>
+          <div class="Card">
+            <img
+              src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-1.png"
+              alt="이미지"
+            />
+            <div class="Card-hover">
+              <h3>로이 스튜디오</h3>
+              <h5>Roi studio</h5>
+              <p><b>주소: </b>서울 특별시 강남구</p>
+              <p><b>촬영비: </b>679,000원</p>
+              <p><b>최소 보증: </b>150명</p>
+              <p><b>전화번호: </b>010-XXXX-XXXX</p>
+            </div>
+          </div>
+          <div class="Card">
+            <img
+              src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-1.png"
+              alt="이미지"
+            />
+            <div class="Card-hover">
+              <h3>로이 스튜디오</h3>
+              <h5>Roi studio</h5>
+              <p><b>주소: </b>서울 특별시 강남구</p>
+              <p><b>촬영비: </b>679,000원</p>
+              <p><b>최소 보증: </b>150명</p>
+              <p><b>전화번호: </b>010-XXXX-XXXX</p>
+            </div>
+          </div>
+          <div class="Card">
+            <img
+              src="https://wdrtest1.s3.ap-northeast-2.amazonaws.com/reservation/studio-1.png"
+              alt="이미지"
+            />
+            <div class="Card-hover">
+              <h3>로이 스튜디오</h3>
+              <h5>Roi studio</h5>
+              <p><b>주소: </b>서울 특별시 강남구</p>
+              <p><b>촬영비: </b>679,000원</p>
+              <p><b>최소 보증: </b>150명</p>
               <p><b>전화번호: </b>010-XXXX-XXXX</p>
             </div>
           </div>
           
       </section>
-      <!-- 5. pagination -->
+      <!-- 5. slide -->
     </div>
   </body>
   <div id="footer-placeholder"></div>
