--- a/html/admin/adminMain.html
+++ b/html/admin/adminMain.html
@@ -7,11 +7,19 @@
         <link rel="stylesheet" href="../../css/common/reset.css" />
         <script defer src="../../js/main/main.js"></script>
         <link rel="stylesheet" href="../../css/admin/adminMain.css" />
+        <link
+            rel="stylesheet"
+            href="../../css/common/sidebar/sidebarAdmin.css"
+        />
     </head>
     <body>
         <header id="header-placeholder"></header>
 
         <div class="admin-container hd__inner1100">
+            <aside class="admin-sidebar">
+                <div id="admin-sidebar-placeholder"></div>
+            </aside>
+
             <main class="admin-content">
                 <!-- 1. 상단 요약 섹션 -->
                 <section class="summary">
@@ -103,7 +111,10 @@
                                 </div>
                                 <div>
                                     <span>전달 사항</span>
-                                    <p>2024년 10월 15일 오후 2시에 예식을</p>
+                                    <p>
+                                        2024년 10월 15일 오후 2시에 예식을
+                                        진행하고자 합니다.
+                                    </p>
                                 </div>
                             </div>
                         </div>
