--- a/html/admin/adminMain.html
+++ b/html/admin/adminMain.html
@@ -11,6 +11,7 @@
             rel="stylesheet"
             href="../../css/common/sidebar/sidebarAdmin.css"
         />
+        <script defer src="../../js/admin/adminMain.js"></script>
     </head>
     <body>
         <header id="header-placeholder"></header>
@@ -26,16 +27,16 @@
                     <h1>안녕하세요. 마리아쥬스퀘어 관리자님 🙌</h1>
                     <div class="summary-lists">
                         <div class="summary-item">
-                            <div class="summary-title">오늘 방문 일정</div>
+                            <div class="summary-title">신규 방문 예약</div>
                             <div class="summary-count">
-                                <span class="number">3</span>
+                                <span class="number">2</span>
                                 <span class="unit">건</span>
                             </div>
                         </div>
                         <div class="summary-item">
-                            <div class="summary-title">신규 방문 예약</div>
+                            <div class="summary-title">오늘 방문 일정</div>
                             <div class="summary-count">
-                                <span class="number">2</span>
+                                <span class="number">3</span>
                                 <span class="unit">건</span>
                             </div>
                         </div>
@@ -47,7 +48,7 @@
                     <h2>신규 방문 예약</h2>
                     <div class="new-visit-header">
                         <p>
-                            💡 신규 방문 예약 <span>2</span
+                            💡 웨딩홀 신규 방문 예약 <span>2</span
                             ><span>건</span>있습니다.
                         </p>
                         <a href="#">예약관리 바로가기 >>></a>
@@ -82,7 +83,9 @@
                 <section class="today-visit">
                     <h2>고객 방문 일정</h2>
                     <div class="today-visit-header">
-                        <p>✅ 오늘 방문 예약 <span>3</span>건 있습니다.</p>
+                        <p>
+                            ✅ 오늘 웨딩홀 방문 일정 <span>3</span>건 있습니다.
+                        </p>
                         <a href="#">예약관리 바로가기 >></a>
                     </div>
                     <div class="visit-detail-container">
@@ -109,11 +112,16 @@
                                     <span>희망 예식일</span>
                                     <span>2024-11-23 토요일</span>
                                 </div>
-                                <div>
+                                <div class="message">
                                     <span>전달 사항</span>
-                                    <p>
+                                    <p class="message-summary">
                                         2024년 10월 15일 오후 2시에 예식을
-                                        진행하고자 합니다.
+                                        진행하고자 합니다. 예상 인원은 250명
+                                        정도이며, 예산은 3000만원 내외로
+                                        생각하고 있습니다. 특별히 꽃장식과 사진
+                                        촬영을 부탁드리고 싶습니다. 예약 가능
+                                        여부와 세부사항, 추가 비용 등에 대해
+                                        상담하고 싶습니다.
                                     </p>
                                 </div>
                             </div>
