feat : [FE] 페이지네이션  재사용 가능 하도록  컴포넌트화 ( 웨딩홀 리스트에 적용)

--- a/html/weddingHall/weddingHallList.html
+++ b/html/weddingHall/weddingHallList.html
@@ -3,13 +3,18 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Wedder</title>
+        <title>weddingHallList</title>
         <link rel="stylesheet" href="../../css/common/reset.css" />
         <link
             rel="stylesheet"
             href="../../css/weddingHall/weddingHallList.css"
         />
+        <link
+            rel="stylesheet"
+            href="../../css/common/pagination/pagination.css"
+        />
         <script defer src="../../js/main/main.js"></script>
+        <script defer src="../../js/pagination/pagination.js"></script>
     </head>
     <body>
         <div id="header-placeholder"></div>
@@ -574,8 +579,11 @@
                     </div>
                 </div>
             </section>
-            <section class="pagenation"></section>
         </div>
+
+        <!-- 페이지네이션  -->
+        <div id="pagination-placeholder"></div>
+
         <div id="footer-placeholder"></div>
     </body>
 </html>
