--- a/html/estimate/estimateDetails.html
+++ b/html/estimate/estimateDetails.html
@@ -27,8 +27,10 @@
                         <div class="main-img">
                           <img src="../../assets/images/estimateDetails1.png" alt="Studio Image">
                         </div>
-                        <p>S 스튜디오</p>
-                        <p>서울특별시 서초구 신반포로 4길 7</p>
+                        <div class="content">
+                            <p>S 스튜디오</p>
+                            <p>서울특별시 서초구 신반포로 4길 7</p>
+                        </div>
                     </div>
                     <div class="option">
                         <span><strong>기본 옵션</strong></span>
