feat : [FE] 방문 예약 고객 확인 페이지 1차 완성

--- a/html/visitReservation/visitReserveDate.html
+++ b/html/visitReservation/visitReserveDate.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Wedder</title>
         <link rel="stylesheet" href="../../css/common/reset.css" />
         <link rel="stylesheet" href="../../css/visitReservation/visitReserveDate.css" />
         <script src="../../js/main/main.js"></script>
@@ -23,7 +23,7 @@
                 </div>
             </section>
 
-            <section class="reserve-container">
+            <section class="container">
                 <!-- 방문 일자 선택 -->
                 <div class="reserve-date">
                     <h1>방문 일자 선택</h1>
