--- a/html/reservation/reservationCategory.html
+++ b/html/reservation/reservationCategory.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wedder-reservation</title>
     <link rel="stylesheet" href="../../css/common/reset.css" />
-    <link rel="stylesheet" href="../../css/reservation/Reservation-category.css" />
+    <link rel="stylesheet" href="../../css/reservation/reservationCategory.css" />
     <script src="../../js/main/main.js"></script>
 </head>
 <body>
@@ -39,34 +39,34 @@
         <section class="category-all">
             <div class="category">
                 <a href="#">
-                    <img src="../../assets/images/Reservation-CG-Studio.png" alt="Studio">
+                    <img src="../../assets/images/reservation-studio.png" alt="Studio">
                     <h3 class="category-text">Studio</h3>  
                 </a>
             </div>
             <div class="category">
                 <a href="#">
-                    <img src="../../assets/images/Resevation-CG-Dress.png" alt="Dress">
+                    <img src="../../assets/images/resevation-dress.png" alt="Dress">
                     <h3 class="category-text">Dress</h3>   
                 </a>
             </div>
             <div class="category">
                 <a href="#">
-                    <img src="../../assets/images/Reservation-CG-Makeup.png" alt="Hair&Makeup">
+                    <img src="../../assets/images/reservation-makeup.jpg" alt="Hair&Makeup">
                     <h3 class="category-text2">Hair & <br>Makeup</h3>
                 </a>   
             </div>
             <div class="category">
                 <a href="#">
-                    <img src="../../assets/images/Reservation-CG-Package.png" alt="Package">
+                    <img src="../../assets/images/reservation-package.png" alt="Package">
                     <h3 class="category-text">Package</h3>
                 </a>
             </div>
         </section>
 
         <!-- 다음 단계 버튼 -->
-        <div class="category-btn">
-            <span class="category-nxt-btn">다음 단계로</span>
-        </div>   
+        <section class="btn">
+            <button class="btn-nxt">다음 단계로</button>
+        </section>   
     </div>
     <div id="footer-placeholder"></div>
 </body>
