chore : [FE] 간단수정

--- a/html/reservation/reservationSelectCompany.html
+++ b/html/reservation/reservationSelectCompany.html
@@ -281,8 +281,8 @@
                     </div>
                 </div>
                 <div class="options">
-                    <div>a</div>
-                    <div>a</div>
+                    <div></div>
+                    <div></div>
                 </div>
             </div>
         </section>
